--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 body {
+  font-family: 'Inter Tight', sans-serif; /* Default font */
+}
+
+/* Adding a custom Rubik font class */
+.font-rubik {
   font-family: 'Rubik', sans-serif;
 }
