--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,7 @@
   height: calc(var(--container-size) / 2);
   border-radius: calc(var(--container-size) / 4);
   background-color: #8fb5f5;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.2s ease;
   overflow: hidden;
 }
 
@@ -42,7 +42,7 @@
   align-items: center;
   justify-content: start;
   padding: 4px;
-  transition: justify-content 0.3s ease;
+  transition: justify-content 0.2s ease;
 }
 
 .theme-switch__sun-moon-container {
@@ -51,7 +51,7 @@
   background-color: #f5eb42;
   border-radius: 50%;
   position: relative;
-  transition: transform 0.5s ease, background-color 0.3s ease;
+  transition: transform 0.5s ease, background-color 0.2s ease;
 }
 
 .theme-switch__moon {
@@ -96,7 +96,7 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  transition: opacity 0.3s ease;
+  transition: opacity 0.2s ease;
   color: #fff;
 }
 
@@ -107,7 +107,7 @@
   width: 100%;
   height: 100%;
   opacity: 0.4;
-  transition: opacity 0.3s ease;
+  transition: opacity 0.2s ease;
   pointer-events: none;
 }
 
@@ -136,14 +136,7 @@
   opacity: 0;
 }
 
-/* Media Queries for Mobile */
-@media (max-width: 768px) {
-  .theme-switch {
-    top: 5px;
-    right: 5px;
-  }
-}
-
+/* Global Styles */
 @layer base {
   :root {
     --background: 245 249 255;
@@ -154,14 +147,20 @@
     --background: 26 26 26;
     --text-color: 255 255 255;
   }
+
+  body,
+  .bg-white,
+  .dark .bg-white,
+  .bg-[#F5F9FF],
+  .dark .bg-[#F5F9FF],
+  .bg-[#212121],
+  .dark .bg-[#212121] {
+    @apply transition-colors duration-100 ease-in-out;
+  }
 }
 
 body {
-  @apply transition-colors duration-300;
-}
-
-* {
-  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+  @apply bg-[var(--background)] text-[var(--text-color)];
 }
 
 /* Mobile-first responsive adjustments */
